test/attr/escaping_inout_arugment.code
// RUN: %target-typecheck-verify-language

immutable _: (_ v: inout @escaping () -> Void) -> ()
// expected-error@-1 {{inout expression is implicitly escaping}}{{20-30=}}

fn m(v: inout @escaping () -> Void) {}
// expected-error@-1 {{inout expression is implicitly escaping}}{{17-27=}}
